--- a/index.html
+++ b/index.html
@@ -264,49 +264,49 @@
 
   <div class="row container mx-auto">
       <!--Grid column-->
-      <div class="col-md-8 mb-md-0 mb-5 text-shadow-drop-br ">
-          <form id="contact-form" name="contact-form" action="mail.php" method="POST">
+      <!-- <div class="col-md-8 mb-md-0 mb-5 text-shadow-drop-br ">
+          <form id="contact-form" name="contact-form" action="mail.php" method="POST"> -->
 
               <!--Grid row-->
-              <div class="row">
+              <!-- <div class="row"> -->
 
                   <!--Grid column-->
-                  <div class="col-md-6 my-3 text-shadow-drop-br">
+                  <!-- <div class="col-md-6 my-3 text-shadow-drop-br">
                       <div class="md-form mb-0">
                         <label for="name" class="text-shadow-drop-br">Your name</label>
                         <input type="text" id="name" name="name" class="form-control" >
                       </div>
-                  </div>
+                  </div> -->
                   <!--Grid column-->
 
                   <!--Grid column-->
-                  <div class="col-md-6 my-3 text-shadow-drop-br">
+                  <!-- <div class="col-md-6 my-3 text-shadow-drop-br">
                       <div class="md-form mb-0 text-shadow-drop-br">
                         <label for="email" class="text-shadow-drop-br">Your email</label>
                         <input type="text" id="email" name="email" class="form-control" required>
                       </div>
-                  </div>
+                  </div> -->
                   <!--Grid column-->
 
-              </div>
+              <!-- </div> -->
               <!--Grid row-->
 
               <!--Grid row-->
-              <div class="row">
+              <!-- <div class="row">
                   <div class="col-md-12 my-3 text-shadow-drop-br">
                       <div class="md-form mb-0 text-shadow-drop-br">
                         <label for="subject" class="text-shadow-drop-br">Subject</label>
                         <input type="text" id="subject" name="subject" class="form-control">
                       </div>
                   </div>
-              </div>
+              </div> -->
               <!--Grid row-->
 
               <!--Grid row-->
-              <div class="row">
+              <!-- <div class="row"> -->
 
                   <!--Grid column-->
-                  <div class="col-md-12 -3">
+                  <!-- <div class="col-md-12 -3">
 
                       <div class="md-form text-shadow-drop-br">
                         <label for="message text-shadow-drop-br">Your message</label>
@@ -314,39 +314,45 @@
                       </div>
 
                   </div>
-              </div>
+              </div> -->
               <!--Grid row-->
 
-          </form>
+          <!-- </form>
 
           <div class="text-center text-md-left my-4">
               <a class="btn btn-primary bg-gradient" onclick="document.getElementById('contact-form').submit();">Send</a>
           </div>
           <div class="status"></div>
-      </div>
+      </div> -->
       <!--Grid column-->
 
       <!--Grid column-->
-      <div class="col-lg-3 col-md-4 mx-auto text-center mt-4 mb-auto bg-light rounded text-dark">
+      <div class="col-lg-3 col-md-4 mx-auto text-center mt-2 mb-auto bg-light rounded text-dark">
           <ul class="list-unstyled mb-0">
               <li class="my-2">
-                <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="pb-2 bi bi-geo-alt-fill text-danger" viewBox="0 0 16 16">
-                  <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10m0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6"/>
-                </svg>
-                  <p>Pasig City, Philippines</p>
+                <a href="https://www.google.com/maps/place/Bonifacio+Global+City,+Taguig,+Metro+Manila/@14.5431521,121.0209448,14z/data=!3m1!4b1!4m6!3m5!1s0x3397c8f3fa2994af:0x89c988af4760e40a!8m2!3d14.5408671!4d121.0503183!16zL20vMDd3ZzAw?entry=ttu" target="_blank">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="pb-2 bi bi-geo-alt-fill text-danger" viewBox="0 0 16 16">
+                    <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10m0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6"/>
+                  </svg>
+                </a>
+                  <p>Manila, Philippines</p>
               </li>
 
               <li class="my-2">
-                <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="pb-2 bi bi-phone-vibrate-fill text-warning" viewBox="0 0 16 16">
-                  <path d="M4 4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2zm5 7a1 1 0 1 0-2 0 1 1 0 0 0 2 0M1.807 4.734a.5.5 0 1 0-.884-.468A8 8 0 0 0 0 8c0 1.347.334 2.618.923 3.734a.5.5 0 1 0 .884-.468A7 7 0 0 1 1 8c0-1.18.292-2.292.807-3.266m13.27-.468a.5.5 0 0 0-.884.468C14.708 5.708 15 6.819 15 8c0 1.18-.292 2.292-.807 3.266a.5.5 0 0 0 .884.468A8 8 0 0 0 16 8a8 8 0 0 0-.923-3.734M3.34 6.182a.5.5 0 1 0-.93-.364A6 6 0 0 0 2 8c0 .769.145 1.505.41 2.182a.5.5 0 1 0 .93-.364A5 5 0 0 1 3 8c0-.642.12-1.255.34-1.818m10.25-.364a.5.5 0 0 0-.93.364c.22.563.34 1.176.34 1.818s-.12 1.255-.34 1.818a.5.5 0 0 0 .93.364C13.856 9.505 14 8.769 14 8s-.145-1.505-.41-2.182"/>
-                </svg>
+                <a href="tel: +639278552445">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="pb-2 bi bi-phone-vibrate-fill text-warning" viewBox="0 0 16 16">
+                    <path d="M4 4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2zm5 7a1 1 0 1 0-2 0 1 1 0 0 0 2 0M1.807 4.734a.5.5 0 1 0-.884-.468A8 8 0 0 0 0 8c0 1.347.334 2.618.923 3.734a.5.5 0 1 0 .884-.468A7 7 0 0 1 1 8c0-1.18.292-2.292.807-3.266m13.27-.468a.5.5 0 0 0-.884.468C14.708 5.708 15 6.819 15 8c0 1.18-.292 2.292-.807 3.266a.5.5 0 0 0 .884.468A8 8 0 0 0 16 8a8 8 0 0 0-.923-3.734M3.34 6.182a.5.5 0 1 0-.93-.364A6 6 0 0 0 2 8c0 .769.145 1.505.41 2.182a.5.5 0 1 0 .93-.364A5 5 0 0 1 3 8c0-.642.12-1.255.34-1.818m10.25-.364a.5.5 0 0 0-.93.364c.22.563.34 1.176.34 1.818s-.12 1.255-.34 1.818a.5.5 0 0 0 .93.364C13.856 9.505 14 8.769 14 8s-.145-1.505-.41-2.182"/>
+                  </svg>
+                </a>
                 <p>+ 63 927 855 2445</p>
               </li>
 
               <li class="my-2">
-                <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="pb-2 bi bi-send-fill text-primary" viewBox="0 0 16 16">
-                  <path d="M15.964.686a.5.5 0 0 0-.65-.65L.767 5.855H.766l-.452.18a.5.5 0 0 0-.082.887l.41.26.001.002 4.995 3.178 3.178 4.995.002.002.26.41a.5.5 0 0 0 .886-.083zm-1.833 1.89L6.637 10.07l-.215-.338a.5.5 0 0 0-.154-.154l-.338-.215 7.494-7.494 1.178-.471z"/>
-                </svg>
+                <a href="mailto:andrew.tuquib@gmail.com">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="pb-2 bi bi-send-fill text-primary" viewBox="0 0 16 16">
+                    <path d="M15.964.686a.5.5 0 0 0-.65-.65L.767 5.855H.766l-.452.18a.5.5 0 0 0-.082.887l.41.26.001.002 4.995 3.178 3.178 4.995.002.002.26.41a.5.5 0 0 0 .886-.083zm-1.833 1.89L6.637 10.07l-.215-.338a.5.5 0 0 0-.154-.154l-.338-.215 7.494-7.494 1.178-.471z"/>
+                  </svg>
+                </a>
                 <p>andrew.tuquib@gmail.com</p>
               </li>
           </ul>
